--- a/public/partials/projects.Android.html
+++ b/public/partials/projects.Android.html
@@ -2,22 +2,30 @@
   $('.page-chooser li').removeClass('active');
   $('#Android').addClass('active');
 </script>
-<article class="portfolio-item white odd" id="ontheway-Android">
+<article class="portfolio-item white" ng-repeat='project in projects' ng-class-even="'even'">
   <div class="wrap row">
+
     <div class="col-md-7">
       <div class="image-wrapper-blank">
-        <center> <img src="/images/screenshot_ontheway-Android.png" alt="Ontheway" width="281" height="500"> </center>
+        <center> 
+          <img ng-src="{{project.imageURL}}" alt="{{project.name}}" width="281" height="500"> 
+        </center>
       </div>
     </div>
 
     <div class="col-md-5">
       <div class="description">
         <div>
-          <h2>Ontheway</h2>
-          <p><span style="color:black">A peer-to-peer delivery network.</span><br><br>Request anything delivered anywhere or make money doing deliveries on the side. Find out more at <a href="http://www.ontheway-app.com" target="_blank">ontheway-app.com</a></p>
+          <h2>{{project.name}}</h2>
+          <p>
+            <span style="color:black">{{project.subtitle}}</span>
+            <br><br>
+            <span ng-bind-html="project.descriptionHTML | unsafe"></span>
+          </p>
         </div>
-        <a href="https://play.google.com/store/apps/details?id=innovations.enroute.jjiang.ontheway" target="_blank"><img src="images/googleplay.svg" id="googleplayimg"></a>
+        <a ng-href="{{project.link}}" target="_blank"><img src="images/googleplay.svg" id="googleplayimg"></a>
       </div>
     </div>
+
   </div>
 </article>
