--- a/public/partials/projects.web.html
+++ b/public/partials/projects.web.html
@@ -2,82 +2,29 @@
   $('.page-chooser li').removeClass('active');
   $('#web').addClass('active');
 </script>
-<article class="portfolio-item white">
+
+<article class="portfolio-item white" ng-repeat='project in projects' ng-class-even="'even'">
   <div class="wrap row">
+
     <div class="col-md-7">
       <div class="image-wrapper-blank">
-        <center> <img src="images/screenshot_otw_web.png" alt="ontheway-app.com" width="655" height="500"> </center>
+        <center> 
+          <img ng-src="{{project.imageURL}}" alt="{{project.name}}" width="655" height="500"> 
+        </center>
       </div>
     </div>
 
     <div class="col-md-5">
       <div class="description">
-        <br>
-        <h3>Ontheway</h3>
-        <p><br><br>A Node.js web server for Ontheway, a peer-to-peer delivery platform.<br>Visit the website for more information.</p>
-        <br></br>
-        <a href="http://www.ontheway-app.com" target="_blank"> <span class="button blue arrow">Go To Site</span> </a>
-      </div>
-    </div>
-
-  </div>
-</article>
-
-<article class="portfolio-item white odd">
-  <div class="wrap row">
-    <div class="col-md-7">
-      <div class="image-wrapper-blank">
-        <center> <img src="images/screenshot_victorzhou.png" alt="VictorZhou.com" width="655" height="500"> </center>
-      </div>
-    </div>
-
-    <div class="col-md-5">
-      <div class="description">
-        <br>
-        <h3>VictorZhou.com</h3>
-        <p><br><br>100% developed by yours truly.<br>In case you hadn't realized, that's this website you're on right now. Hopefully you realized that.</p>
-      </div>
-    </div>
-
-  </div>
-</article>
-
-<article class="portfolio-item white">
-  <div class="wrap row">
-    <div class="col-md-7">
-      <div class="image-wrapper-blank">
-        <center> <img src="images/screenshot_jenny.png" alt="ZhangJenny.com" width="655" height="500"> </center>
-      </div>
-    </div>
-
-    <div class="col-md-5">
-      <div class="description">
-        <br>
-        <h3>ZhangJenny.com</h3>
-        <p><br><br>Built by me for a friend.<br>Hosts a portfolio of her artwork/graphic designs as well as basic information and contact methods.</p>
-        <br></br>
-        <a href="http://www.zhangjenny.com" target="_blank"> <span class="button blue arrow">Go To Site</span> </a>
-      </div>
-    </div>
-
-  </div>
-</article>
-
-<article class="portfolio-item white odd" id="psi">
-  <div class="wrap row">
-    <div class="col-md-7">
-      <div class="image-wrapper-blank">
-        <center> <img src="images/screenshot_psi.png" alt="Princeton Social Innovation" width="655" height="500"> </center>
-      </div>
-    </div>
-
-    <div class="col-md-5">
-      <div class="description">
-        <br>
-        <h3>Princeton Social Innovation</h3>
-        <p><br><br>I helped develop the this website as a Web Development Officer in Princeton Social Innovation.</p>
-        <br></br>
-        <a href="http://www.princetonsi.com" target="_blank"> <span class="button blue arrow">Go To Site</span> </a>
+        <div>
+          <h2>{{project.name}}</h2>
+          <p>
+            <span style="color:black">{{project.subtitle}}</span>
+            <br><br>
+            <span ng-bind-html="project.descriptionHTML | unsafe"></span>
+          </p>
+        </div>
+        <a ng-href='{{project.link}}' target="_blank"> <span class="button blue arrow">Go To Site</span> </a>
       </div>
     </div>
 
