added animations for state transitions

--- a/public/partials/contact.html
+++ b/public/partials/contact.html
@@ -35,8 +35,8 @@
   <div class="header profile light" id="vz_contactHeader">
     <div class="wrap">
       <div id="profile-intro">
-        <h1 class="wow fadeIn" data-wow-duration="0.75s">Connect With Me</h1>
-        <p class="wow fadeIn" data-wow-duration="0.75s" data-wow-delay=".3s">Have something to say? Contact me anytime and share your thoughts.</p>
+        <h1>Connect With Me</h1>
+        <p>Have something to say? Contact me anytime and share your thoughts.</p>
       </div>
     </div>
   </div>
