--- a/public/partials/presskits.html
+++ b/public/partials/presskits.html
@@ -8,8 +8,8 @@
   <div class="header profile light" id="vz_presskitsHeader">
     <div class="wrap">
       <div id="profile-intro">
-        <h1 class="wow fadeIn" data-wow-duration="0.75s">Press Kits</h1>
-        <p class="wow fadeIn" data-wow-duration="0.75s" data-wow-delay=".3s">Download Press Kits for my apps. If an app you're interested in is missing, feel free to <a href="/contact" class="a_light">contact me</a>.</p>
+        <h1>Press Kits</h1>
+        <p>Download Press Kits for my apps. If an app you're interested in is missing, feel free to <a href="/contact" class="a_light">contact me</a>.</p>
       </div>
     </div>
   </div>
