--- a/public/partials/projects.html
+++ b/public/partials/projects.html
@@ -7,8 +7,8 @@
   <div class="header profile light" id="vz_projectsHeader">
     <div class="wrap">
       <div id="profile-intro">
-        <h1 class="wow fadeIn" data-wow-duration="0.75s" data-wow-delay="0s">My Projects</h1>
-        <p class="wow fadeIn" data-wow-duration="0.75s" data-wow-delay=".3s">
+        <h1>My Projects</h1>
+        <p>
           Check out the projects I've worked on, or just view my <a href="http://www.github.com/vzhou842" target="_blank" class="a_light">Github</a>
         </p>
       </div>
@@ -25,4 +25,4 @@
   </ul>
 </div>
 
-<div ui-view></div>
+<div ui-view class="anim-in-out anim-slide-below-fade" data-anim-sync="true"></div>
