removed broken underline span from /contact

--- a/public/partials/contact.html
+++ b/public/partials/contact.html
@@ -75,19 +75,19 @@
     <h3>You can also find me on:</h3>
     <ul class="contact-social-links">
       <li>
-        <a href="https://github.com/vzhou842" title="View my Github" class="underliner github" target="_blank">Github<span></span></a>
+        <a href="https://github.com/vzhou842" title="View my Github" class="underliner github" target="_blank">Github</a>
         <small>vzhou842</small>
       </li>
       <li>
-        <a href="https://twitter.com/victorczhou" title="Follow me on Twitter" class="underliner twitter" target="_blank">Twitter<span></span></a>
+        <a href="https://twitter.com/victorczhou" title="Follow me on Twitter" class="underliner twitter" target="_blank">Twitter</a>
         <small>5,782 Followers</small>
       </li>
       <li>
-        <a href="https://www.linkedin.com/profile/public-profile-settings?trk=prof-edit-edit-public_profile" title="Follow me on LinkedIn" class="underliner linkedin" target="_blank">LinkedIn<span></span></a>
+        <a href="https://www.linkedin.com/profile/public-profile-settings?trk=prof-edit-edit-public_profile" title="Follow me on LinkedIn" class="underliner linkedin" target="_blank">LinkedIn</a>
         <small>216 Connections</small>
       </li>
       <li>
-        <a href="https://www.youtube.com/channel/UC0pRzrLI_nTitsGMiZw8hLw" title="Follow me on Youtube" class="underliner youtube" target="_blank">Youtube<span></span></a>
+        <a href="https://www.youtube.com/channel/UC0pRzrLI_nTitsGMiZw8hLw" title="Follow me on Youtube" class="underliner youtube" target="_blank">Youtube</a>
         <small>16,010 Views</small>
       </li>
     </ul>
