fixed presskits download issue

--- a/public/partials/presskits.html
+++ b/public/partials/presskits.html
@@ -26,7 +26,7 @@
 <br></br>
 <div class="presskit_icon wow fadeIn" data-wow-duration="0.75s">
   <center>
-    <a href="vz_presskits/Flooding Dots Press Kit.zip"><img src="images/icon_floodingdots.png"></a>
+    <a href="vz_presskits/Flooding Dots Press Kit.zip" target="_blank"><img src="images/icon_floodingdots.png"></a>
     <br></br>
     <p class="presskit_title">Flooding Dots</p>
   </center>
@@ -36,7 +36,7 @@
 <br></br>
 <div class="presskit_icon wow fadeIn" data-wow-duration="0.75s">
   <center>
-    <a href="vz_presskits/Encircle 2 Press Kit.zip"><img src="images/icon_encircle2.png"></a>
+    <a href="vz_presskits/Encircle 2 Press Kit.zip" target="_blank"><img src="images/icon_encircle2.png"></a>
     <br></br>
     <p class="presskit_title">Encircle the Turtle 2</p>
   </center>
@@ -46,7 +46,7 @@
 <br></br>
 <div class="presskit_icon wow fadeIn" data-wow-duration="0.75s">
   <center>
-    <a href="vz_presskits/Moby Dick Press Kit.zip"><img src="images/icon_mobydick.png"></a>
+    <a href="vz_presskits/Moby Dick Press Kit.zip" target="_blank"><img src="images/icon_mobydick.png"></a>
     <br></br>
     <p class="presskit_title">Moby Dick</p>
   </center>
@@ -56,7 +56,7 @@
 <br></br>
 <div class="presskit_icon wow fadeIn" data-wow-duration="0.75s">
   <center>
-    <a href="vz_presskits/SpreadIt Press Kit.zip"><img src="images/icon_spreadit.png"></a>
+    <a href="vz_presskits/SpreadIt Press Kit.zip" target="_blank"><img src="images/icon_spreadit.png"></a>
     <br></br>
     <p class="presskit_title">SpreadIt</p>
   </center>
