--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -45,12 +45,6 @@
 	font-size: 18px;
 }
 
-p .emphasize {
-	color: rgba(25,25,25,.8);
-}
-
-
-
 .page-chooser {
     background: #0b121d;
     width: 100%;
@@ -109,69 +103,6 @@ p .emphasize {
     color:rgba(175, 175, 175, 1.0);
 }
 
-.popup-bottom {
-    position: fixed; 
-    z-index: 1000; 
-    bottom: 0px;
-    right: 0px;
-    left: 0px;
-    height: 40px;
-    background-color: rgba(0, 127, 255, 0.9);
-    text-align: center;
-    transition: .4s background-color ease;
-}
-
-.popup-bottom p {
-    color:white;
-    margin-top:5px;
-    font-size:18px;
-}
-.popup-bottom a {
-    text-decoration: underline;
-    color:white;
-}
-.popup-bottom a:hover {
-    color:rgba(200, 200, 200, 1.0);
-}
-
-.popup-bottom:hover {
-    background-color: rgba(0, 100, 200, 1.0);
-}
-
-@media only screen and (max-width:1000px) {
-
-    .popup-bottom {
-        height:30px;
-    }
-    .popup-bottom p {
-        font-size:14px;
-    }
-}
-
-@media only screen and (max-width:640px) {
-
-    .popup-bottom {
-        height:50px;
-    }
-    .popup-bottom p {
-        text-wrap:unrestricted;
-    }
-}
-
-a.boxclose{
-    position: absolute;
-    top: 0px;
-    right: 3px;
-    font-size:16px;      
-    padding: 0px;
-    margin: 0px;
-    cursor: pointer;
-    text-decoration: none;
-}
-
-
-
-
 .navBar {
     position: fixed; 
     z-index: 1000; 
@@ -193,11 +124,12 @@ a.boxclose{
     margin: 0;
     padding-right: 50px;
     padding-top: 12px;
+    float: right;
 }
 
 .navBar li {
     display: inline;
-    float: right;
+    float: left;
     padding-left: 40px;
     padding-right: 40px;
     font-size: 18px;
@@ -238,16 +170,18 @@ img.navBar-logo {
     z-index: 9999;
 }
 
-@media only screen and (max-width:1000px) {
+.profile-container {
+    padding: 50px;
+}
 
+@media only screen and (max-width:1000px) {
     .navBar ul {
-        padding-right: 40px;
+        padding-right: 10px;
     }
 
     .navBar li {
-        padding-left: 20px;
-        padding-right: 20px;
-        font-size: 16px;
+        padding-left: 15px;
+        padding-right: 15px;
     }
 
     .navBar .left {
@@ -255,28 +189,60 @@ img.navBar-logo {
     }
 
     img.navBar-logo {
-        left: 10px;
+        left: 0px;
     }
 
+    .profile-container {
+        padding: 5px;
+    }
 }
 
 @media only screen and (max-width:640px) {
+    #nav-left, img.navBar-logo {
+        display:none;
+    }
 
     .navBar ul {
-        padding-right: 30px;
+        padding-right: 0px;
+        float: none;
     }
 
     .navBar li {
-        padding-left: 5px;
-        padding-right: 5px;
-        font-size: 15px;
+        padding-left: 8px;
+        padding-right: 8px;
+        float: none;
+        display: inline;
     }
 
-    .navBar .left {
-        padding-left: 50px;
+    .navBar li a {
+        display: inline-block;
+    }
+
+    .navBar {
+        text-align: center;
     }
 
     img.navBar-logo {
         left: 0px;
+    }
+
+    .profile-container {
+        max-width: 94%;
+    }
+
+    #vz_homeHeader {
+        height: 475px;
+    }
+
+    #vz_projectsHeader {
+        height: 450px
+    }
+
+    #vz_contactHeader {
+        height: 425px
+    }
+
+    #vz_presskitsHeader {
+        height: 375px;
     }
 }
