--- a/public/css/main.css
+++ b/public/css/main.css
@@ -278,16 +278,6 @@ ul {
     transition: .2s all linear
 }
 
-.button.green {
-    border: 2px solid #7ed321;
-    color: #66b313
-}
-
-.button.green:hover {
-    color: #599d0f;
-    border-color: #66b313
-}
-
 .button.blue {
     border: 2px solid rgba(40, 155, 229, 1);
     color: rgba(40, 155, 229, 1);
@@ -331,32 +321,6 @@ ul {
     padding-left: 44px
 }
 
-.cta {
-    text-align: center
-}
-
-.cta h3, .cta span {
-    display: block
-}
-
-.cta h3 {
-    font-size: 34px;
-    font-weight: 300;
-    color: #212934;
-    margin: 0 0 20px 0
-}
-
-.cta span {
-    color: rgba(33, 41, 52, .6);
-    font-size: 24px;
-    font-weight: 300;
-    margin-bottom: 40px
-}
-
-.cta a {
-    margin: 0 10px
-}
-
 a.underliner {
     display: inline-block;
     transition: .2s all linear;
@@ -398,52 +362,6 @@ a.underliner:hover>span {
     color: #212934;
     display: block;
     margin-bottom: 5px
-}
-
-@-webkit-keyframes wings {
-    0% {
-        -webkit-transform: rotateY(90deg);
-        transform: rotateY(90deg)
-    }
-
-    100% {
-        -webkit-transform: rotateY(0);
-        transform: rotateY(0)
-    }
-}
-
-@-moz-keyframes wings {
-    0% {
-        -moz-transform: rotateY(90deg);
-        transform: rotateY(90deg)
-    }
-
-    100% {
-        -moz-transform: rotateY(0);
-        transform: rotateY(0)
-    }
-}
-
-@-ms-keyframes wings {
-    0% {
-        -ms-transform: rotateY(90deg);
-        transform: rotateY(90deg)
-    }
-
-    100% {
-        -ms-transform: rotateY(0);
-        transform: rotateY(0)
-    }
-}
-
-@keyframes wings {
-    0% {
-        transform: rotateY(90deg)
-    }
-
-    100% {
-        transform: rotateY(0)
-    }
 }
 
 header nav {
@@ -646,49 +564,27 @@ body.down header.clone {
         padding: 140px 0 10px 0
     }
 
-    .header {
-        height: auto !important;
-        min-height: 100px !important
-    }
-
     .header h1 {
         margin: 0 0 30px 0 !important;
-        line-height: 1.2em
+        line-height: 1.2em;
     }
 
     .header p {
-        margin: 0 0 40px 0 !important
+        margin: 0 0 40px 0 !important;
     }
 
     .header.blog p {
         margin: 0 auto 40px auto !important
+    }
+
+    .footer .social, .footer .social a {
+        color: rgba(255, 255, 255, .5);
     }
 }
 
 @media only screen and (max-width:768px) {
     .wrap {
         width: 90%
-    }
-
-    .cta h3 {
-        font-size: 30px
-    }
-
-    .cta span {
-        font-size: 18px
-    }
-
-    .cta a {
-        font-size: 18px;
-        margin: 0 5px
-    }
-
-    .header h1 {
-        font-size: 36px
-    }
-
-    .header p {
-        font-size: 18px
     }
 
     #content {
