--- a/public/css/projects.css
+++ b/public/css/projects.css
@@ -70,7 +70,7 @@
     font-size: 13px;
 }
 
-@media only screen and (max-width:991px) {
+@media only screen and (max-width:1000px) {
     .portfolio-item {
         padding: 40px 0;
         height: auto !important;
@@ -91,11 +91,11 @@
     }
 
     .portfolio-item h2 {
-        margin: 0 0 15px
+        margin: 0 0 15px;
     }
 
-    .portfolio-item p {
-        margin: 0 0 25px
+    .portfolio-item .description p {
+        margin: 0 0 25px;
     }
 }
 
@@ -122,12 +122,10 @@
     }
 
     .portfolio-item h2 {
-        font-size: 30px;
         margin: 0 0 10px
     }
 
     .portfolio-item p {
-        font-size: 16px;
         margin: 0 0 15px
     }
 
