--- a/public/partials/profile.about.html
+++ b/public/partials/profile.about.html
@@ -2,7 +2,7 @@
 	$('.page-chooser li').removeClass('active');
 	$('#profile_about_me').addClass('active');
 </script>
-<div class="container" style="padding:50px;">
+<div class="container profile-container">
   <h1 class="page-header wow fadeIn" data-wow-duration="0.75s" data-wow-delay="0.1s">About Me</h1>
   <p class="wow fadeIn" data-wow-duration="0.75s" data-wow-delay="0.1s">I'm a software developer from Plano, Texas. I'm well-versed in iOS (Objective-C) and Android (Java) app development, Node.js (Javascript), R, C/C++, HTML/CSS, as well as Python, SQL, and PHP to a lesser degree. I've been a pretty avid iOS developer for some time, and have ~20 apps in the App Store totalling close to 100,000 downloads. One of the projects I'm most proud of is <a href="http://www.ontheway-app.com" target="_blank">Ontheway</a>, a peer-to-peer delivery network I started with a few friends for which I built the vast majority of the iOS, Android, and Node.js apps.</p>
   <br></br>
