--- a/public/partials/profile.resume.html
+++ b/public/partials/profile.resume.html
@@ -2,7 +2,7 @@
   $('.page-chooser li').removeClass('active');
   $('#profile_resume').addClass('active');
 </script>
-<div class="container" style="padding:50px;">
+<div class="container profile-container">
   <h1 class="page-header">Resume</h1>
     <br></br>
     <p>If you would like to obtain a copy of my resume, please <a href="/contact">contact me</a> and I will get back to you as soon as I can.</p>
