About update + minor reordering

--- a/public/partials/contact.html
+++ b/public/partials/contact.html
@@ -80,15 +80,10 @@
       </li>
       <li>
         <a href="https://twitter.com/victorczhou" title="Follow me on Twitter" class="underliner twitter" target="_blank">Twitter</a>
-        <small>5,782 Followers</small>
+        <small>victorczhou</small>
       </li>
       <li>
-        <a href="https://www.linkedin.com/profile/public-profile-settings?trk=prof-edit-edit-public_profile" title="Follow me on LinkedIn" class="underliner linkedin" target="_blank">LinkedIn</a>
-        <small>216 Connections</small>
-      </li>
-      <li>
-        <a href="https://www.youtube.com/channel/UC0pRzrLI_nTitsGMiZw8hLw" title="Follow me on Youtube" class="underliner youtube" target="_blank">Youtube</a>
-        <small>16,010 Views</small>
+        <a href="https://www.linkedin.com/in/victor-zhou-674405a5" title="Follow me on LinkedIn" class="underliner linkedin" target="_blank">LinkedIn</a>
       </li>
     </ul>
   </div>
