--- a/public/partials/profile.about.html
+++ b/public/partials/profile.about.html
@@ -4,9 +4,11 @@
 </script>
 <div class="container profile-container">
   <h1 class="page-header wow fadeIn" data-wow-duration="0.75s" data-wow-delay="0.1s">About Me</h1>
-  <p class="wow fadeIn" data-wow-duration="0.75s" data-wow-delay="0.1s">I'm a software developer from Plano, Texas. I'm well-versed in iOS (Objective-C) and Android (Java) app development, Node.js, Javascript, C/C++, HTML/CSS, R, as well as Python, SQL, and PHP to a lesser degree. I've been a pretty avid iOS developer for some time, and have ~20 apps in the App Store totalling over 100,000 downloads. One of the projects I'm most proud of is <a href="http://geoarena.online" target="_blank">GeoArena Online</a>, a multiplayer browser game I built using HTML5, Node.js, Socket.io, Redis, and MongoDB.</p>
+  <p class="wow fadeIn" data-wow-duration="0.75s" data-wow-delay="0.1s">I'm a software developer from Plano, Texas. I'm well-versed in Javascript, Objective-C, Java, HTML/CSS, Node.js, Redis, and C/C++, as well as MongoDB, Python, R, and SQL to a lesser degree.
+  A few of the projects I'm most known for include <a href="http://geoarena.online" target="_blank">GeoArena Online</a> [<a href="https://reddit.com/r/geoarena" target="_blank">subreddit</a>, <a href="https://www.producthunt.com/posts/geoarena-online" target="_blank">Product Hunt</a>], a fast-paced multiplayer browser game that had hundreds of thousands of monthly players,
+  and <a href="http://generals.io" target="_blank">generals.io</a> [<a href="https://reddit.com/r/generalsio" target="_blank">subreddit</a>, <a href="https://www.producthunt.com/posts/generals-io" target="_blank">Product Hunt</a>, <a href="https://news.ycombinator.com/item?id=13145781" target="_blank">Hacker News</a>], a multiplayer browser strategy game with half a million monthly players.</p>
   <br></br>
-  <p class="wow fadeIn" data-wow-duration="0.75s" data-wow-delay="0.1s">If you have any thoughts or comments on me or my projects, please use the <a href="/contact">Contact</a> section. I appreciate your time and interest. </p>
+  <p class="wow fadeIn" data-wow-duration="0.75s" data-wow-delay="0.1s">If you want to reach out to me for any reason, please use the <a href="/contact">Contact</a> section. I appreciate your time and interest.</p>
 </div>
 
 <br></br>
