--- a/public/partials/projects.html
+++ b/public/partials/projects.html
@@ -9,7 +9,7 @@
       <div id="profile-intro">
         <h1>My Projects</h1>
         <p>
-          Check out the projects I've worked on, or just view my <a href="http://www.github.com/vzhou842" target="_blank" class="a_light">Github</a>
+          Check out the projects I've worked on, or just view my <a href="http://www.github.com/vzhou842" target="_blank" class="a_light">Github</a>.
         </p>
       </div>
     </div>
@@ -18,9 +18,9 @@
 
 <div class="page-chooser">
   <ul class="wrap">
+    <li id="web" ui-sref='projects.web'>Web</li>
     <li id="iOS" ui-sref='projects.iOS'>iOS</li>
     <li id="Android" ui-sref='projects.Android'>Android</li>
-    <li id="web" ui-sref='projects.web'>Web</li>
     <li id="research" ui-sref='projects.research'>Research</li>
   </ul>
 </div>
