--- a/public/partials/profile.about.html
+++ b/public/partials/profile.about.html
@@ -12,6 +12,6 @@
 </div>
 
 <br></br>
-<a ui-sref='projects.iOS' class="wow fadeInUp" data-wow-duration="0.75s" data-wow-delay="0.1s"><span id="open-info" class="button blue arrow">View My Work</span> </a>
+<a ui-sref='projects.web' class="wow fadeInUp" data-wow-duration="0.75s" data-wow-delay="0.1s"><span id="open-info" class="button blue arrow">View My Work</span> </a>
 <br></br>
 <br></br>
