--- a/public/css/main.css
+++ b/public/css/main.css
@@ -48,16 +48,6 @@ main, nav, section, summary {
     display: block
 }
 
-audio, canvas, progress, video {
-    display: inline-block;
-    vertical-align: baseline
-}
-
-audio:not([controls]) {
-    display: none;
-    height: 0
-}
-
 [hidden], template {
     display: none
 }
@@ -392,20 +382,6 @@ header nav ul a {
     display: inline-block;
 }
 
-header nav ul #white-header{
-    font-family: "HelveticaNeue-Bold", "Helvetica Neue";
-    font-size: 16px;
-    letter-spacing: 1px;
-    transition: .2s color linear;
-    display: inline-block;
-    color: rgba(255, 255, 255, .6);
-    text-shadow: 0 2px 4px rgba(11, 18, 29, .7);;
-}
-
-header nav ul #white-header.active, header nav ul #white-header:hover {
-    color: rgba(255, 255, 255, .9);
-}
-
 header nav ul a.active, header nav ul a:hover {
     color: rgba(11, 18, 29, .95)
 }
@@ -443,30 +419,12 @@ body.down header.clone {
     line-height: 1.5em
 }
 
-.header.dark {
-    background-color: #0b121d
-}
-
-.header.dark h1 {
-    color: #FFF
-}
-
-.header.dark p {
-    color: rgba(255, 255, 255, .6)
-}
-
-#header-particles canvas {
-    position: absolute;
-    top: 0;
-    left: 0
-}
-
-.header.work, .footer {
+.footer {
     overflow: hidden;
     position: relative
 }
 
-.header.work>.wrap, .footer>.wrap {
+.footer>.wrap {
     z-index: 2
 }
 
@@ -480,33 +438,12 @@ body.down header.clone {
     color: rgba(33, 41, 52, .6)
 }
 
-.header.work-detail {
-    min-height: 420px
-}
-
-.header.work-detail h1 {
-    font-size: 38px;
-    margin: 70px 0 40px 0
-}
-
-.header.work-detail p {
-    font-size: 17px;
-    max-width: 440px
-}
-
 .footer {
     padding: 45px 0 35px 0;
     background: #0b121d;
     text-align: center;
     position: relative
 }
-
-.footer canvas {
-    position: absolute;
-    top: 0;
-    left: 0
-}
-
 .footer .sitemap {
     margin-bottom: 10px
 }
@@ -532,7 +469,7 @@ body.down header.clone {
 }
 
 .footer .copyright {
-    margin-top: 60px;
+    margin-top: 30px;
     font-size: 12px;
     color: rgba(255, 255, 255, .4);
     letter-spacing: .5px
@@ -559,10 +496,6 @@ body.down header.clone {
     .header p {
         margin: 0 0 40px 0 !important;
     }
-
-    .header.blog p {
-        margin: 0 auto 40px auto !important
-    }
 }
 
 @media only screen and (max-width:768px) {
@@ -575,4 +508,746 @@ body.down header.clone {
     }
 }
 
+#profile-intro {
+    color: #FFF;
+    width: 440px;
+    margin-top: 50px;
+    position: relative
+}
 
+#profile-intro h1 {
+    font-size: 46px;
+    line-height: 50px;
+    margin: 0 0 35px 0;
+    font-weight: 400
+}
+
+#profile-intro p {
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 1.4em;
+    margin: 0;
+    max-width: 420px;
+    color: #FFF
+}
+
+#profile-intro:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -55px;
+    width: 112px;
+    height: 23px;
+}
+
+h2 {
+    font-size: 18px;
+    margin: 0 0 15px 0;
+    color: #212934
+}
+
+p {
+    margin: 0;
+    font-size: 15px;
+    font-weight: 300;
+    color: rgba(33, 41, 52, .6);
+    line-height: 1.6em
+}
+
+#open-info {
+    left: 50%;
+    margin-left: -129px
+}
+
+#profile-content {
+    display: none
+}
+
+.content h2 {
+    margin: 0;
+    text-align: right;
+    color: #212934;
+    font-size: 26px;
+    font-weight: 300;
+    position: relative
+}
+
+.content h2:after {
+    content: "";
+    position: absolute;
+    bottom: -12px;
+    left: 0;
+    right: 0;
+    height: 1px;
+    background-image: -o-linear-gradient(90deg, #fafafa 0, #dbdbdb 100%);
+    background-image: -moz-linear-gradient(90deg, #fafafa 0, #dbdbdb 100%);
+    background-image: -ms-linear-gradient(90deg, #fafafa 0, #dbdbdb 100%);
+    background-image: linear-gradient(90deg, #fafafa 0, #dbdbdb 100%)
+}
+
+.content h3 {
+    margin: 0 0 12px 0;
+    color: #212934;
+    font-size: 18px;
+    font-weight: 400
+}
+
+.content p {
+    font-size: 15px;
+    color: rgba(33, 41, 52, .7);
+    margin: 0 0 30px 0;
+    font-weight: 300
+}
+
+.col-left {
+    width: 30%;
+    float: left;
+    margin-right: 5%
+}
+
+.col-right {
+    width: 65%;
+    float: left;
+    margin-bottom: 50px
+}
+
+.col-right>p {
+    color: #212934;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 1.6em;
+    margin: 0 0 20px 0
+}
+
+ol {
+    margin: 0;
+    counter-reset: principles-counter;
+    padding-left: 30px
+}
+
+ol li {
+    list-style-type: none;
+    position: relative
+}
+
+ol li:last-child p {
+    margin: 0
+}
+
+ol li:before {
+    content: counter(principles-counter, decimal-leading-zero);
+    counter-increment: principles-counter;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-size: 14px;
+    color: #7ed321;
+    font-weight: 600;
+    position: absolute;
+    left: -30px;
+    top: -1px
+}
+
+.social {
+    margin-bottom: 0
+}
+
+.social>div {
+    background: #FFF;
+    float: left
+}
+
+.social a {
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-size: 16px
+}
+
+.social .inner {
+    padding: 15px
+}
+
+.social .meta {
+    display: block;
+    font-size: 13px;
+    font-weight: 300;
+    color: rgba(33, 41, 52, .6)
+}
+
+#profile-content .cta {
+    margin: 60px 0 -60px 0
+}
+
+@media only screen and (max-width:1000px) {
+    #profile-intro h1 {
+        font-size: 56px;
+        line-height: 1.2em
+    }
+
+    #profile-intro p {
+        padding: 0;
+        font-size: 24px;
+        margin: 0 0 70px !important;
+    }
+}
+
+@media only screen and (max-width:768px) {
+    #profile-intro {
+        width: 100%;
+        margin: 0
+    }
+
+    #profile-intro:after {
+        display: none
+    }
+
+    #profile-intro h1 {
+        font-size: 52px;
+        line-height: 46px;
+        margin: 0 0 30px 0
+    }
+
+    #profile-intro p {
+        margin: 0 0 100px !important;
+        padding: 0;
+        font-size: 20px;
+        padding-right: 30%;
+        max-width: 100%;
+    }
+
+    .col-left, .col-right {
+        float: none;
+        width: 100%
+    }
+
+    .content h2 {
+        text-align: left;
+        margin: 0 0 30px 0
+    }
+
+    .content h2:after {
+        display: none
+    }
+
+    .social>div {
+        float: none
+    }
+}
+
+.header.work {
+    height: 380px
+}
+
+.header.work h1 {
+    margin: 50px 0 40px
+}
+
+.header.work p {
+    margin: 0
+}
+
+.portfolio-item {
+    height: 700px;
+    width: 100%;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    padding: 80px 0;
+}
+
+.portfolio-item.white {
+    background: #FFF;
+}
+
+.portfolio-item.white.even {
+    background: #fafafa;
+}
+
+.portfolio-item h2 {
+    font-size: 36px;
+    font-weight: 300;
+    margin: 0 0 30px;
+    line-height: 1.1em;
+    color: #212934;
+}
+
+.portfolio-item p {
+    font-weight: 300;
+    font-size: 16px;
+    margin: 0 0 35px;
+    line-height: 1.4em;
+    color: rgba(33, 41, 52, .6)
+}
+
+.portfolio-item img {
+    max-width: 100%;
+    height: auto;
+    box-shadow: 0 0px 20px rgba(0, 0, 0, .4);
+}
+
+#appstoreimg, #googleplayimg {
+    opacity: 0.8;
+    transition: opacity 0.5s ease;
+    box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
+}
+
+#appstoreimg:hover, #googleplayimg:hover {
+    opacity: 1.0;
+}
+
+.portfolio-item .description {
+    width: 100%;
+    max-width: 100%;
+    position: absolute;
+    top: 50%;
+    text-align: left
+}
+
+.portfolio-item .review-source {
+    font-style: italic;
+    font-size: 13px;
+}
+
+@media only screen and (max-width:1000px) {
+    .portfolio-item {
+        padding: 40px 0;
+        height: auto !important;
+    }
+
+    .portfolio-item .description {
+        position: relative;
+        width: 100%;
+        top: auto;
+        margin-top: 0;
+        left: auto;
+        right: auto;
+        text-align: center
+    }
+
+    .portfolio-item .description {
+        margin-top: 20px;
+    }
+
+    .portfolio-item h2 {
+        margin: 0 0 15px;
+    }
+
+    .portfolio-item .description p {
+        margin: 0 0 25px;
+    }
+}
+
+@media only screen and (max-width:768px) {
+
+    .header.work p br {
+        display: none
+    }
+
+    .portfolio-item .top-bar {
+        display: none
+    }
+
+    .introduction.columns>div {
+        float: none;
+        width: 100%
+    }
+}
+
+@media only screen and (max-width:480px) {
+    .portfolio-item {
+        padding: 30px 0 0;
+        margin-bottom: 20px
+    }
+
+    .portfolio-item h2 {
+        margin: 0 0 10px
+    }
+
+    .portfolio-item p {
+        margin: 0 0 15px
+    }
+
+    blockquote {
+        margin: 0
+    }
+}
+
+h2 {
+    font-size: 28px;
+    color: rgba(50,50,50,1.0);
+    margin: 0 0 50px;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+}
+
+h3 {
+    font-size: 18px;
+    color: rgba(75,75,75,1.0);
+    margin: 0 0 25px;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+}
+
+.column-left, .column-right {
+    float: left
+}
+
+.column-left {
+    width: 660px;
+    margin: 0 80px 20px 0
+}
+
+.column-right {
+    width: 260px
+}
+
+.contact-social-links {
+    margin: 0 0 35px;
+    list-style-type: none
+}
+
+.contact-social-links li {
+    margin-bottom: 5px
+}
+
+.contact-social-links small {
+    font-size: 14px;
+    float: right;
+    line-height: 38px;
+    color: rgba(58, 79, 92, .3)
+}
+
+.contact-social-links a {
+    padding: 8px 0 8px 0px;
+    font-weight: 300;
+    font-size: 20px;
+    border-radius: 3px
+}
+
+.contact-social-links a>span {
+    left: 0px
+}
+
+.contact-social-links .twitter {
+    color: rgba(0, 172, 237, 1.0);
+    background-position: -376px 8px
+}
+
+.contact-social-links .twitter>span {
+    background-color: rgba(0, 172, 237, 1.0)
+}
+
+.contact-social-links .linkedin {
+    color: rgba(0, 123, 182, 1.0);
+    background-position: -376px -42px
+}
+
+.contact-social-links .linkedin>span {
+    background-color: rgba(0, 123, 182, 1.0);
+}
+
+.contact-social-links .youtube {
+    color: rgba(229, 45, 39, 1.0);
+    background-position: -376px -42px
+}
+
+.contact-social-links .youtube>span {
+    background-color: rgba(229, 45, 39, 1.0);
+}
+
+.contact-social-links .github {
+    color: rgba(40, 40, 40, 1.0);
+    background-position: -376px -42px
+}
+
+.contact-social-links .github>span {
+    background-color: rgba(40, 40, 40, 1.0);
+}
+
+#hello-form {
+    display: none
+}
+
+fieldset {
+    border: none;
+    padding: 15px;
+    margin: 0;
+    position: relative
+}
+
+#result, #result-hello {
+    display: none;
+    background: #FFF;
+    position: absolute;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    text-align: center
+}
+
+#result span, #result-hello span {
+    display: block;
+    color: rgba(0, 0, 0, .6);
+    font-size: 18px;
+    font-weight: 300
+}
+
+#result .heading, #result-hello .heading {
+    font-size: 24px;
+    color: #212934;
+    margin-bottom: 10px
+}
+
+#result .success, #result-hello .success {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%)
+}
+
+input[type=text], input[type=email], textarea {
+    font-weight: 300;
+    font-size: 18px;
+    border: none;
+    border-bottom: 1px solid rgba(90, 97, 102, .2);
+    display: block;
+    width: 100%;
+    margin-bottom: 35px;
+    color: #000;
+    padding: 0 0 5px
+}
+
+input[type=text]:focus, input[type=email]:focus, textarea:focus {
+    outline: 0
+}
+
+.floatlabel-wrapper>label {
+    font-size: 13px;
+    font-weight: 600;
+    color: #289be5
+}
+
+textarea {
+    height: 22px;
+    padding-bottom: 3px;
+    transition: .2s height ease;
+    line-height: 1.5em
+}
+
+#message {
+    height: 132px;
+}
+
+::-webkit-input-placeholder {
+    color: #7D7D7D
+}
+
+:-moz-placeholder {
+    color: #7D7D7D
+}
+
+::-moz-placeholder {
+    color: #7D7D7D
+}
+
+:-ms-input-placeholder {
+    color: #7D7D7D
+}
+
+.select-style {
+    padding: 5px 0 0;
+    margin: 0 0 45px;
+    border-bottom: 1px solid rgba(90, 97, 102, .2);
+    width: 320px;
+    overflow: hidden;
+    background-color: #fff;
+    float: left;
+    position: relative;
+    margin-right: 20px
+}
+
+.select-style:after {
+    position: absolute;
+    content: "";
+    width: 8px;
+    height: 6px;
+    right: 10px;
+    top: 12px
+}
+
+.select-style.last {
+    margin-right: 0
+}
+
+.select-style select {
+    padding: 0 0 5px;
+    width: 320px;
+    border: none;
+    font-weight: 300;
+    font-size: 18px;
+    box-shadow: none;
+    background-color: transparent;
+    background-image: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    color: #000
+}
+
+.select-style select.default-value {
+    color: #7D7D7D
+}
+
+.select-style select:focus {
+    outline: 0
+}
+
+.respond-time {
+    color: #7D7D7D;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 52px
+}
+
+.respond-time>span {
+    color: #464646
+}
+
+.contact-content .button {
+    float: right
+}
+
+.contact-content .button:active, .contact-content .button:focus {
+    outline: 0
+}
+
+.stamp {
+    height: 180px;
+    width: 180px;
+    background: url(../img/content/contact/sent-stamp.png) no-repeat;
+    background-size: 180px 180px;
+    position: absolute;
+    right: 60px;
+    top: -150px;
+    opacity: 0;
+    -webkit-animation: stamp-in .3s 1s ease-in forwards;
+    -moz-animation: stamp-in .3s 1s ease-in forwards;
+    -ms-animation: stamp-in .3s 1s ease-in forwards;
+    animation: stamp-in .3s 1s ease-in forwards
+}
+
+@-webkit-keyframes stamp-in {
+    from {
+        opacity: 0;
+        -webkit-transform: scale(2) rotate(0deg);
+        transform: scale(2) rotate(0deg)
+    }
+
+    to {
+        opacity: 1;
+        -webkit-transform: scale(0.8) rotate(15deg);
+        transform: scale(0.8) rotate(15deg)
+    }
+}
+
+@-moz-keyframes stamp-in {
+    from {
+        opacity: 0;
+        -moz-transform: scale(2) rotate(0deg);
+        transform: scale(2) rotate(0deg)
+    }
+
+    to {
+        opacity: 1;
+        -moz-transform: scale(0.8) rotate(15deg);
+        transform: scale(0.8) rotate(15deg)
+    }
+}
+
+@-ms-keyframes stamp-in {
+    from {
+        opacity: 0;
+        -ms-transform: scale(2) rotate(0deg);
+        transform: scale(2) rotate(0deg)
+    }
+
+    to {
+        opacity: 1;
+        -ms-transform: scale(0.8) rotate(15deg);
+        transform: scale(0.8) rotate(15deg)
+    }
+}
+
+keyframes stamp-in from {
+    opacity: 0;
+    -webkit-transform: scale(2) rotate(0deg);
+    -moz-transform: scale(2) rotate(0deg);
+    -ms-transform: scale(2) rotate(0deg);
+    transform: scale(2) rotate(0deg)
+}
+
+keyframes stamp-in to {
+    opacity: 1;
+    -webkit-transform: scale(0.8) rotate(15deg);
+    -moz-transform: scale(0.8) rotate(15deg);
+    -ms-transform: scale(0.8) rotate(15deg);
+    transform: scale(0.8) rotate(15deg)
+}
+
+@media only screen and (max-width:1000px) {
+    .column-left {
+        width: 60%;
+        margin: 0 7% 20px 0
+    }
+
+    .column-right {
+        width: 33%
+    }
+
+    .select-style {
+        width: 100%;
+        margin: 0 0 35px
+    }
+
+    .respond-time {
+        display: none
+    }
+}
+
+@media only screen and (max-width:768px) {
+    .column-left {
+        float: none;
+        width: 100%
+    }
+
+    .column-left {
+        margin-bottom: 0
+    }
+
+    .column-right {
+        display: none
+    }
+
+    .contact-content .button {
+        width: 100%;
+        float: none
+    }
+
+    .contact-content .button:before {
+        display: none
+    }
+}
+
+@media only screen and (max-width:480px) {
+    .select-style {
+        width: 100%
+    }
+
+    .select-style select {
+        width: 100%
+    }
+
+    .form-chooser ul {
+        text-align: center
+    }
+}
