Removed old projects

--- a/public/partials/contact.html
+++ b/public/partials/contact.html
@@ -1,6 +1,6 @@
 <script>
   $(document).ready(function(){
-    
+
     $('#submit').click(function(){
 
       $("#contact_form").fadeOut(400);
@@ -20,9 +20,9 @@
       });
 
       return false;
-     
+
     });
-   
+
   });
 
   //Select the Contact navbar item
@@ -83,7 +83,8 @@
         <small>victorczhou</small>
       </li>
       <li>
-        <a href="https://www.linkedin.com/in/victor-zhou-674405a5" title="Follow me on LinkedIn" class="underliner linkedin" target="_blank">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/vzhou842" title="Follow me on LinkedIn" class="underliner linkedin" target="_blank">LinkedIn</a>
+        <small>vzhou842</small>
       </li>
     </ul>
   </div>
