minor content change

--- a/public/partials/projects.iOS.html
+++ b/public/partials/projects.iOS.html
@@ -8,8 +8,8 @@
 
     <div class="col-md-7">
       <div class="image-wrapper-blank">
-        <center> 
-          <img ng-src="{{project.imageURL}}" alt="{{project.name}}" width="{{project.landscape ? 441 : 567}}" height="500"> 
+        <center>
+          <img ng-src="{{project.imageURL}}" alt="{{project.name}}" width="{{project.landscape ? 441 : 567}}" height="500">
         </center>
       </div>
     </div>
@@ -33,13 +33,8 @@
 
 <br></br>
 <br></br>
-<center>  
-  <h1>But Wait - There's More!</h1>
-</center>
-<br></br>
-<a href="http://ax.itunes.apple.com/WebObjects/MZSearch.woa/wa/search?term=victor%20zhou"> 
-  <span id="open-info" class="button blue arrow wow fadeIn" data-wow-duration="0.75s" data-wow-delay=".1s">See ALL of my iOS Apps</span> 
+<a href="http://ax.itunes.apple.com/WebObjects/MZSearch.woa/wa/search?term=victor%20zhou">
+  <span id="open-info" class="button blue arrow wow fadeIn" data-wow-duration="0.75s" data-wow-delay=".1s">See All of my iOS Apps</span>
 </a>
-<br></br>
 <br></br>
 <br></br>
