--- a/public/partials/profile.about.html
+++ b/public/partials/profile.about.html
@@ -1,12 +1,13 @@
 <script>
-	$('.page-chooser li').removeClass('active');
-	$('#profile_about_me').addClass('active');
+  $('.page-chooser li').removeClass('active');
+  $('#profile_about_me').addClass('active');
 </script>
 <div class="container profile-container">
   <h1 class="page-header wow fadeIn" data-wow-duration="0.75s" data-wow-delay="0.1s">About Me</h1>
-  <p class="wow fadeIn" data-wow-duration="0.75s" data-wow-delay="0.1s">I'm a software developer from Plano, Texas. I'm well-versed in Javascript, Objective-C, Java, HTML/CSS, Node.js, Redis, and C/C++, as well as MongoDB, Python, R, and SQL to a lesser degree.
-  A few of the projects I'm most known for include <a href="http://geoarena.online" target="_blank">GeoArena Online</a> [<a href="https://reddit.com/r/geoarena" target="_blank">subreddit</a>, <a href="https://www.producthunt.com/posts/geoarena-online" target="_blank">Product Hunt</a>], a fast-paced multiplayer browser game that had hundreds of thousands of monthly players,
-  and <a href="http://generals.io" target="_blank">generals.io</a> [<a href="https://reddit.com/r/generalsio" target="_blank">subreddit</a>, <a href="https://www.producthunt.com/posts/generals-io" target="_blank">Product Hunt</a>, <a href="https://news.ycombinator.com/item?id=13145781" target="_blank">Hacker News</a>], a multiplayer browser strategy game with half a million monthly players.</p>
+  <p class="wow fadeIn" data-wow-duration="0.75s" data-wow-delay="0.1s">
+    I'm a software engineer currently studying at Princeton University. I'm an experienced full stack web and iOS developer, and I've also done some work with Machine Learning and Computer Vision.
+    A few of the projects I'm most known for include <a href="http://generals.io" target="_blank">generals.io</a> [<a href="https://reddit.com/r/generalsio" target="_blank">subreddit</a>, <a href="https://www.producthunt.com/posts/generals-io" target="_blank">Product Hunt</a>, <a href="https://news.ycombinator.com/item?id=13145781" target="_blank">Hacker News</a>], a multiplayer browser strategy game with half a million monthly players, and <a href="http://geoarena.online" target="_blank">GeoArena Online</a> [<a href="https://reddit.com/r/geoarena" target="_blank">subreddit</a>, <a href="https://www.producthunt.com/posts/geoarena-online" target="_blank">Product Hunt</a>], a fast-paced multiplayer browser game that had hundreds of thousands of monthly players.
+  </p>
   <br></br>
   <p class="wow fadeIn" data-wow-duration="0.75s" data-wow-delay="0.1s">If you want to reach out to me for any reason, please use the <a href="/contact">Contact</a> section. I appreciate your time and interest.</p>
 </div>
