Updated and added faster.js to About Me

--- a/public/partials/profile.about.html
+++ b/public/partials/profile.about.html
@@ -1,15 +1,29 @@
 <script>
-  $('.page-chooser li').removeClass('active');
-  $('#profile_about_me').addClass('active');
+	$('.page-chooser li').removeClass('active');
+	$('#profile_about_me').addClass('active');
 </script>
 <div class="container profile-container">
-  <h1 class="page-header wow fadeIn" data-wow-duration="0.75s" data-wow-delay="0.1s">About Me</h1>
-  <p class="wow fadeIn" data-wow-duration="0.75s" data-wow-delay="0.1s">
-    I'm a software engineer currently studying at Princeton University. I'm an experienced full stack web and iOS developer, and I've also done some work with Machine Learning and Computer Vision.
-    A few of the projects I'm most known for include <a href="http://generals.io" target="_blank">generals.io</a> [<a href="https://reddit.com/r/generalsio" target="_blank">subreddit</a>, <a href="https://www.producthunt.com/posts/generals-io" target="_blank">Product Hunt</a>, <a href="https://news.ycombinator.com/item?id=13145781" target="_blank">Hacker News</a>], a multiplayer browser strategy game with half a million monthly players, and <a href="http://geoarena.online" target="_blank">GeoArena Online</a> [<a href="https://reddit.com/r/geoarena" target="_blank">subreddit</a>, <a href="https://www.producthunt.com/posts/geoarena-online" target="_blank">Product Hunt</a>], a fast-paced multiplayer browser game that had hundreds of thousands of monthly players.
-  </p>
-  <br></br>
-  <p class="wow fadeIn" data-wow-duration="0.75s" data-wow-delay="0.1s">If you want to reach out to me for any reason, please use the <a href="/contact">Contact</a> section. I appreciate your time and interest.</p>
+	<h1 class="page-header wow fadeIn" data-wow-duration="0.75s" data-wow-delay="0.1s">About Me</h1>
+	<p class="wow fadeIn" data-wow-duration="0.75s" data-wow-delay="0.1s">
+		I'm a software engineer currently studying at Princeton University. I'm an experienced full stack web, iOS, and Android developer, and I've also done some work with ML / CV / NLP.
+		A few of the projects I'm most known for include:
+	</p>
+	<br />
+	<ul style='margin-left: 5%' class="wow fadeIn" data-wow-duration="0.75s" data-wow-delay="0.1s">
+		<li><p>
+			<a href="http://generals.io" target="_blank">generals.io</a> [<a href="https://reddit.com/r/generalsio" target="_blank">subreddit</a>, <a href="https://news.ycombinator.com/item?id=13145781" target="_blank">Hacker News</a>, <a href="https://www.producthunt.com/posts/generals-io" target="_blank">Product Hunt</a>], a multiplayer browser strategy game with half a million monthly players
+		</p></li>
+
+		<li><p>
+			<a href='https://github.com/vzhou842/faster.js' target='_blank'>faster.js</a> [<a href='https://news.ycombinator.com/item?id=16886494' target='_blank'>Hacker News</a>], a micro-optimizing Javascript compiler
+		</p></li>
+
+		<li><p>
+			<a href="http://geoarena.online" target="_blank">GeoArena Online</a> [<a href="https://reddit.com/r/geoarena" target="_blank">subreddit</a>, <a href="https://www.producthunt.com/posts/geoarena-online" target="_blank">Product Hunt</a>], a fast-paced multiplayer browser game that had hundreds of thousands of monthly players
+		</p></li>
+	</ul>
+	<br />
+	<p class="wow fadeIn" data-wow-duration="0.75s" data-wow-delay="0.1s">If you want to reach out to me for any reason, please use the <a href="/contact">Contact</a> section. I appreciate your time and interest.</p>
 </div>
 
 <br></br>
